# quarchpy-binaries

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/quarchpy_binaries/: __init__.py
